syntax = "proto3";
package fhs_types;

enum RegulatorType {
    UNKNOWN = 0;
    VALVE = 1;
    PUMP = 2;
    TAP = 3;
}
message FluidRegulator {
    int64 fr_id = 1;
    int32 gpio_pin = 2;
    RegulatorType regulator_type = 3;
}

enum FluidRegulationSchema {
    ID = 0; // Primary Key
    GPIO_PIN = 1;
    REGULATOR_TYPE = 2;
}