syntax = "proto3";
package recipe_types;

import "fhs.proto";

enum IngredientType {
  INGREDIENT_TYPE_UNSPECIFIED = 0;
  INGREDIENT_TYPE_FLUID = 1;
  INGREDIENT_TYPE_EATABLES = 2;
}

enum DrinkSize {
  DRINK_SIZE_UNSPECIFIED = 0;
  DRINK_SIZE_SMALL = 1;
  DRINK_SIZE_MEDIUM = 2;
  DRINK_SIZE_PINT = 3;
  DRINK_SIZE_LARGE = 4;
  DRINK_SIZE_EXTRA_LARGE = 5;
}
message Instruction {
  optional int32 id = 1;
  optional string instruction_detail = 2;
  optional string instruction_name = 3;
}

message Ingredient {
  int64 id = 1;
  string name = 2;
  bool is_active = 3;
  bool is_alcoholic = 4;
  optional fhs_types.FluidRegulator regulator = 5;
  float amount = 6;
  string description = 7;
  IngredientType ingredient_type = 8;
  optional recipe_types.Instruction instruction = 9;
}

message Recipe {
  int32 id = 1;
  string name = 2;
  DrinkSize size = 3;
  map<int32, Instruction> instructions = 4;
  bool user_input = 5;
  string description = 6;
}