syntax = "proto3";
package service_types;

import "fhs.proto";
import "recipe.proto";

message Config {
  int32 port = 1;
}

message AddReceipeRequest {
  recipe_types.Recipe recipe = 1;
}

message AddReceipeResponse {
  int32 receipe_id = 1;
}

message GetRecipeRequest {
  int32 recipe_id = 1;
}

message GetRecipeResponse {
  recipe_types.Recipe recipe = 1;
}

message ModifyRecipeRequest {
  recipe_types.Recipe recipe = 1;
}

message ModifyRecipeResponse {
  int32 recipe_id = 1;
}

message AddInstructionRequest {
  recipe_types.Instruction instruction = 1;
}

message AddInstructionResponse {
  int32 instruction_id = 1;
}

message GetInstructionRequest {
  int32 instruction_id = 1;
}

message GetInstructionResponse {
  recipe_types.Instruction instruction = 1;
}

message ModifyInstructionRequest {
  recipe_types.Instruction instruction = 1;
}

message ModifyInstructionResponse {
  int32 instruction_id = 1;
}

message ModifyFluidRegulatorRequest {
  int32 fr_id = 1;
}

message ModifyFluidRegulatorResponse {
  fhs_types.FluidRegulator fluid = 1;
}
message AddFluidRegulatorRequest {
  fhs_types.FluidRegulator fluid = 1;
}

message RemoveFluidRegulatorRequest {
  int32 fr_id = 1;
}

message RemoveFluidRegulatorResponse {
  
}

message AddFluidRegulatorResponse {
  int32 fr_id = 1;
}
message ModifyIngredientRequest {
  recipe_types.Ingredient ingredient = 1;
}

message ModifyIngredientResponse {
  int32 ingredient_id = 1;
}

message AddIngredientRequest {
  recipe_types.Ingredient ingredient = 1;
}

message AddIngredientResponse {
  int32 ingredient_id = 1;
}

message RemoveIngredientResponse {

}

message RemoveIngredientRequest {
  int32 ingredient_id = 1;
}

message GetIngredientRequest {
  int32 ingredient_id = 1;
}

message GetIngredientResponse {
  recipe_types.Ingredient ingredient = 1;
}